Bug 1255006 - Ensure the displayport rect takes priority over a suppressed-margins displayport. r=kats